[workspace]
members = [
    "cmp_any",
    "display_container",
    "gazebo",
    "gazebo_derive",
    "dupe",
    "dupe_derive",
]
resolver = "2"

[workspace.package]
license = "MIT OR Apache-2.0"
repository = "https://github.com/facebookincubator/gazebo"

[workspace.dependencies]
either = "1.8"
indenter = "0.3.3"
