[package]
name = "gazebo_derive"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Facebook"]
edition = "2018"
description = "Derive macros for the Gazebo library"
repository = "https://github.com/facebookincubator/gazebo"
documentation = "https://docs.rs/gazebo_derive"
readme = "../README.md"
categories = ["rust-patterns"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "1.0.27"
quote = "1.0.3"
